--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.13.1",
     "react-images": "^1.1.7",
     "react-infinite-scroll-component": "^5.0.4",
+    "react-particles-js": "^3.4.0",
     "react-photo-gallery": "^8.0.0",
     "react-responsive-image-grid": "^1.0.0",
     "react-scripts": "3.4.1"
